20220311 자바스크립트 기초 - promise, nonblocking i/o

--- a/test1.html
+++ b/test1.html
@@ -21,7 +21,7 @@
             console.log(n4);
             let n5 = true; //boolean
             console.log(n5);
-            let n6 = [1,2,3,4];  //list타입
+            let n6 = [1,2,3,4];  //list타입 []배열 {} 오브젝트
             console.log(n6);
             console.log(n6[3]);
             let n7 = {
@@ -36,6 +36,8 @@
             n8.set("password","1234");
             console.log(n8.get("username"));
             console.log(n8);
+            const c1="상수";
+            c1="값변경";
 </script>
 </body>
 </html>
